--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     <a class="btn" href="#">Primary button</a>
   </div>
 
+  <div>
+    <a class="btn-subtle" href="#">Subtle button</a>
+  </div>
+
+  <div>
+    <a class="btn-ghost" href="#">Ghost button</a>
+  </div>
+
+  <div>
+    <a class="btn-warning" href="#">Warning button</a>
+  </div>
+
   <!-- Add all other button styles here with both the <div> & <a> tags -->
 
 </body>
