change the error

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
 
   <div>
-    <a class="btn-subtle" href="#">Subtle button</a>
+    <a class="btn btn-subtle" href="#">Subtle button</a>
   </div>
 
   <div>
@@ -24,7 +24,6 @@
   <div>
     <a class="btn-warning" href="#">Warning button</a>
   </div>
-
   <!-- Add all other button styles here with both the <div> & <a> tags -->
 
 </body>
