--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
 
   <div>
-    <a class="btn-ghost" href="#">Ghost button</a>
+    <a class="btn btn-ghost" href="#">Ghost button</a>
   </div>
 
   <div>
