--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
 
   <div>
-    <a class="btn-warning" href="#">Warning button</a>
+    <a class="btn btn-warning" href="#">Warning button</a>
   </div>
   <!-- Add all other button styles here with both the <div> & <a> tags -->
 
