--- a/index.html
+++ b/index.html
@@ -26,5 +26,21 @@
   </div>
   <!-- Add all other button styles here with both the <div> & <a> tags -->
 
+  <div>
+    <a class="btn btn-small" href="#">Primary button small</a>
+  </div>
+
+  <div>
+    <a class="btn btn-subtle btn-small" href="#">Subtle button small</a>
+  </div>
+
+  <div>
+    <a class="btn btn-ghost btn-small" href="#">Ghost button</a>
+  </div>
+
+  <div>
+    <a class="btn btn-warning btn-small" href="#">Warning button</a>
+  </div>
+
 </body>
 </html>
