create big button

--- a/index.html
+++ b/index.html
@@ -42,5 +42,21 @@
     <a class="btn btn-warning btn-small" href="#">Warning button</a>
   </div>
 
+  <div>
+    <a class="btn btn-big" href="#">Primary button small</a>
+  </div>
+
+  <div>
+    <a class="btn btn-subtle btn-big" href="#">Subtle button small</a>
+  </div>
+
+  <div>
+    <a class="btn btn-ghost btn-big" href="#">Ghost button</a>
+  </div>
+
+  <div>
+    <a class="btn btn-warning btn-big" href="#">Warning button</a>
+  </div>
+
 </body>
 </html>
