--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
   </div>
 
   <div>
-    <a class="btn btn-big" href="#">Primary button small</a>
+    <a class="btn btn-big" href="#">Primary button big</a>
   </div>
 
   <div>
-    <a class="btn btn-subtle btn-big" href="#">Subtle button small</a>
+    <a class="btn btn-subtle btn-big" href="#">Subtle button big</a>
   </div>
 
   <div>
-    <a class="btn btn-ghost btn-big" href="#">Ghost button</a>
+    <a class="btn btn-ghost btn-big" href="#">Ghost button big</a>
   </div>
 
   <div>
-    <a class="btn btn-warning btn-big" href="#">Warning button</a>
+    <a class="btn btn-warning btn-big" href="#">Warning button big</a>
   </div>
 
 </body>
